stylesheets/index.css
/* || VARIABLES */
:root {
  --BGCOLOR-HERO-HEADING:rgb(124, 79, 124);
  --BGCOLOR-HERO-HEADING-BEFORE:rgb(57, 1, 57);
  --BGCOLOR-HERO-HEADING-AFTER:rgb(105, 21, 105);
  --BGCOLOR-HERO-HEADING-FADE:fuchsia;

  --FONTCOLOR-HERO-HEADING: whitesmoke;
  --FONTCOLOR-HERO-INFO: whitesmoke;
  --FONTCOLOR-HERO-INFO-SHADOW: rgb(82, 6, 82);
  --BGCOLOR-HERO-HEADING-INFO:rgb(241, 122, 241);
  --BGCOLOR-HERO-HEADING-INFO-FADE:rgb(124, 79, 124);
}

/* || HEADER */
.header__title {
  transform: skew(-5deg, 0deg);

}

/* || MAIN */

.hero__img:nth-child(1) {
  margin-top: 10vh;
  transform: rotate(15deg) skew(-10deg, -10deg) translate(-10vh, 10vh) scale(3,2);
  border-radius: 2px;
  opacity: 0.1;
}

.hero__img:nth-child(2) {
  margin-top: 10vh;
  transform: rotate(10deg) skew(-20deg, -10deg) translate(-6vh, 0vh) scale(4,3);
  border-radius: 2px;
  opacity: 0.2;
}

.hero__img:nth-child(3) {
  margin-top: 10vh;
  transform: rotate(-2deg) skew(8deg, -8deg) translate(0vh, -10vh) scale(6,4);
  border-radius: 2px;
  opacity: 0.3;
}

.hero {
  position: relative;
}

.main__heading {
  position: absolute;
  top: 30vh;
  letter-spacing:5px;
  font-weight: bold;
  font-size: 3vh;
  color: var(--FONTCOLOR-HERO-HEADING);
  background-color: var(--BGCOLOR-HERO-HEADING);
  background-image: linear-gradient(to left, var(--BGCOLOR-HERO-HEADING-FADE), var(--BGCOLOR-HERO-HEADING));
  padding: 2rem; 
  transform: rotate(20deg) skew(-10deg,-10deg);
  box-shadow: 0vh 7vh 2vh  black;
  transition: all 0.3s;
  transition-timing-function: ease-in-out;
  z-index: 1;
}

.main__heading::before {
  content: "";
  width: 100%;
  height: 5vh;
  background-color: var(--BGCOLOR-HERO-HEADING-BEFORE);
  position: absolute;
  transform:rotate(0deg) translate(-2.2vh, 9.2vh) skew(45deg, 0deg);
}


.main__heading::after {
  content: "";
  width: 6.9vh;
  height: 9.8vh;
  background-color:var(--BGCOLOR-HERO-HEADING-AFTER);
  background-image: linear-gradient(var(--BGCOLOR-HERO-HEADING-FADE), var(--BGCOLOR-HERO-HEADING-AFTER));
  position: absolute;
  transform: rotateZ(45deg) translate(2.3vh, -2.6vh) skew(45deg, 0deg);

}

.main__heading:hover, .main__heading:focus {
  top:25vh;
  box-shadow: 0vh 12vh 5vh  black;
}

.main__heading:active {
  color: red;
  top: 26vh;
}


.hero__info {
  min-height: 10rem;
  display: grid;
  place-content: center;
  margin-top: 1.5rem;
  margin-bottom: 2rem;
  padding: 0.5rem;
  width: 100%;
  text-transform: uppercase;
  z-index: 1;
  box-shadow: 2px 2px 15px black;
  background-color: var(--BGCOLOR-HERO-HEADING-INFO);
  opacity: 0.8;
  text-shadow: -0.5px 1px 1px hsl(39, 65%, 27%);
  font-weight: 700;
  font-size: 3vh;
  color: whitesmoke;
}

